--- a/airport-transfers.html
+++ b/airport-transfers.html
@@ -6,22 +6,24 @@
 
   <title>Airport Transfers & City Tours in Cape Town | Virtual Nomad</title>
 
-  <meta name="description" content="Reliable airport transfers, private pickups, and guided city tours in Cape Town. Ideal for visitors, property viewings, and people relocating to Cape Town.">
+  <meta name="description" content="Reliable airport transfers, private pickups, property viewing transport and guided city tours in Cape Town. Serving CBD, Sea Point, Camps Bay and surrounding areas.">
+  <meta name="keywords" content="Cape Town airport transfers, city tours Cape Town, airport pickup Cape Town, private transfers Cape Town, relocation transport Cape Town">
 
   <link rel="canonical" href="https://www.virtualnomad.co.za/airport-transfers.html">
 
-  <!-- LOCAL SEO -->
+  <!-- Local SEO -->
   <meta name="geo.region" content="ZA-WC">
   <meta name="geo.placename" content="Cape Town">
   <meta name="geo.position" content="-33.9696;18.5973">
   <meta name="ICBM" content="-33.9696, 18.5973">
 
   <!-- Robots -->
-  <meta name="robots" content="index, follow">
+  <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large">
 
   <!-- Performance -->
   <link rel="preconnect" href="https://cdn.jsdelivr.net">
   <link rel="preconnect" href="https://cdnjs.cloudflare.com">
+  <link rel="dns-prefetch" href="https://media.istockphoto.com">
 
   <!-- Open Graph -->
   <meta property="og:title" content="Airport Transfers & City Tours in Cape Town | Virtual Nomad">
@@ -30,142 +32,202 @@
   <meta property="og:url" content="https://www.virtualnomad.co.za/airport-transfers.html">
   <meta property="og:image" content="https://www.virtualnomad.co.za/airport-transfers-city-tours-cape-town.jpg">
 
-  <!-- Schema -->
+  <!-- Schema: Service -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "LocalBusiness",
-    "name": "Virtual Nomad Cape Town",
-    "url": "https://www.virtualnomad.co.za/",
-    "telephone": "+27 84 729 0664",
-    "address": {
-      "@type": "PostalAddress",
-      "addressLocality": "Cape Town",
-      "addressRegion": "Western Cape",
-      "addressCountry": "ZA"
+    "@type": "Service",
+    "name": "Airport Transfers & City Tours in Cape Town",
+    "provider": {
+      "@type": "LocalBusiness",
+      "name": "Virtual Nomad Cape Town",
+      "url": "https://www.virtualnomad.co.za/",
+      "telephone": "+27 84 729 0664"
     },
     "areaServed": {
       "@type": "City",
       "name": "Cape Town"
     },
-    "makesOffer": {
-      "@type": "Offer",
-      "itemOffered": {
-        "@type": "Service",
-        "name": "Airport Transfers & City Tours in Cape Town"
-      }
-    }
+    "description": "Private airport transfers, city tours, property viewing transport and relocation support in Cape Town."
   }
   </script>
 
-  <!-- FAQ Schema -->
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "FAQPage",
-    "mainEntity": [
-      {
-        "@type": "Question",
-        "name": "Do you provide airport transfers from Cape Town International Airport?",
-        "acceptedAnswer": {
-          "@type": "Answer",
-          "text": "Yes, we offer private and reliable airport transfers from Cape Town International Airport to destinations across the city."
-        }
-      },
-      {
-        "@type": "Question",
-        "name": "Can I book city tours in Cape Town?",
-        "acceptedAnswer": {
-          "@type": "Answer",
-          "text": "Yes, we provide guided city tours covering major attractions, neighbourhoods, and lifestyle areas in Cape Town."
-        }
-      },
-      {
-        "@type": "Question",
-        "name": "Do you offer transport for property viewings?",
-        "acceptedAnswer": {
-          "@type": "Answer",
-          "text": "Yes, we offer dedicated transport services for property viewings across Cape Town."
-        }
-      }
-    ]
-  }
-  </script>
-
-  <!-- CSS -->
+  <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.5/font/bootstrap-icons.min.css">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark" role="navigation">
+<!-- NAVBAR -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container">
     <a class="navbar-brand d-flex align-items-center" href="index.html">
-      <img src="logo.png" alt="Virtual Nomad Cape Town" height="40" class="me-2" loading="lazy">
+      <img src="logo.png" alt="Virtual Nomad Cape Town" height="40" class="me-2">
       <span class="fw-bold text-uppercase">Virtual Nomad</span>
     </a>
+
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item"><a class="nav-link" href="index.html#home">Home</a></li>
+        <li class="nav-item"><a class="nav-link active" href="index.html#services">Services</a></li>
+        <li class="nav-item"><a class="nav-link" href="index.html#about">About Us</a></li>
+        <li class="nav-item"><a class="nav-link" href="pricing.html">Pricing</a></li>
+        <li class="nav-item"><a class="nav-link" href="index.html#contact">Contact</a></li>
+      </ul>
+    </div>
   </div>
 </nav>
 
-<header class="main-header position-relative" style="height:60vh;">
+<!-- HERO -->
+<header class="position-relative" style="height:60vh;">
   <img src="airport-transfers-city-tours-cape-town.jpg"
        alt="Airport transfers and city tours in Cape Town"
-       class="w-100 h-100 object-fit-cover"
-       loading="eager">
+       class="w-100 h-100 object-fit-cover">
 
   <div class="position-absolute top-0 start-0 w-100 h-100 d-flex flex-column justify-content-center align-items-center text-white text-center"
        style="background:rgba(0,0,0,0.45);">
-    <h1 class="display-5 fw-bold">Airport Transfers & City Tours</h1>
-    <p class="fs-4">Reliable Pickups, Private Transfers & Guided Cape Town Experiences</p>
+    <h1 class="display-5 fw-bold">Airport Transfers & City Tours in Cape Town</h1>
+    <p class="fs-4">Reliable Pickups, Private Transfers & Local Experiences</p>
   </div>
 </header>
 
-<main>
+<!-- INTRO -->
 <section class="container my-5">
-
   <div class="text-center mb-5">
-    <h2>Stress-Free Transport & Local Experiences in Cape Town</h2>
+    <h2>Stress-Free Transport Across Cape Town</h2>
     <p class="lead">
-      Whether you're visiting Cape Town, relocating, or viewing properties, we provide safe airport transfers,
-      private transport, and personalised city tours to help you move around comfortably and confidently.
+      Whether you’re arriving at Cape Town International Airport, relocating, or viewing properties,
+      we provide safe and reliable transport across the CBD, Sea Point, Camps Bay, Claremont and surrounding areas.
     </p>
   </div>
 
-<div class="row g-4">
+  <!-- SERVICES -->
+  <div class="row g-4">
 
-  <div class="col-md-6">
-    <div class="card h-100 shadow-sm">
-      <img src="airport-transfers-cape-town.jpg" class="card-img-top" alt="Luxury airport transfers from Cape Town International Airport with private vehicles" loading="lazy">
-      <div class="card-body">
-        <h3 class="card-title">Airport Transfers</h3>
-        <p class="card-text">Private and reliable airport pickups and drop-offs from Cape Town International Airport.</p>
-        <a href="booking.html" class="btn btn-primary">Book Transfer</a>
+    <!-- Airport Transfers -->
+    <div class="col-md-6">
+      <div class="card h-100 shadow-sm">
+        <img src="airport-transfers-cape-town.jpg"
+             class="card-img-top"
+             loading="lazy"
+             alt="Private airport transfers from Cape Town International Airport">
+        <div class="card-body">
+          <h5 class="card-title">Airport Transfers</h5>
+          <p class="card-text">
+            Private pickups and drop-offs from Cape Town International Airport.
+            Ideal for visitors, professionals, and remote workers.
+          </p>
+          <a href="booking.html" class="btn btn-primary">Book Transfer</a>
+        </div>
       </div>
     </div>
-  </div>
 
-  <div class="col-md-6">
-    <div class="card h-100 shadow-sm">
-      <img src="guided-city-tours-cape-town.jpg" class="card-img-top" alt="Guided city tours of Cape Town including Table Mountain beaches and neighbourhoods" loading="lazy">
-      <div class="card-body">
-        <h3 class="card-title">Guided City Tours</h3>
-        <p class="card-text">Explore Cape Town with guided city tours including Table Mountain and beaches.</p>
-        <a href="booking.html" class="btn btn-primary">Book Tour</a>
+    <!-- City Tours -->
+    <div class="col-md-6">
+      <div class="card h-100 shadow-sm">
+        <img src="guided-city-tours-cape-town.jpg"
+             class="card-img-top"
+             loading="lazy"
+             alt="Guided city tours of Cape Town">
+        <div class="card-body">
+          <h5 class="card-title">Guided City Tours</h5>
+          <p class="card-text">
+            Explore Table Mountain, beaches, lifestyle areas and neighbourhoods
+            with a local guide.
+          </p>
+          <a href="booking.html" class="btn btn-primary">Book Tour</a>
+        </div>
       </div>
     </div>
-  </div>
 
-</div>
+    <!-- Property Viewing -->
+    <div class="col-md-6">
+      <div class="card h-100 shadow-sm">
+        <img src="property-viewing-transfers-cape-town.jpg"
+             class="card-img-top"
+             loading="lazy"
+             alt="Property viewing transport in Cape Town">
+        <div class="card-body">
+          <h5 class="card-title">Property Viewing Transfers</h5>
+          <p class="card-text">
+            Dedicated transport for buyers and renters exploring properties across Cape Town.
+          </p>
+          <a href="booking.html" class="btn btn-primary">Schedule Viewing</a>
+        </div>
+      </div>
+    </div>
+
+    <!-- Arrival Orientation -->
+    <div class="col-md-6">
+      <div class="card h-100 shadow-sm">
+        <img src="arrival-orientation-cape-town.jpg"
+             class="card-img-top"
+             loading="lazy"
+             alt="Arrival orientation and relocation support in Cape Town">
+        <div class="card-body">
+          <h5 class="card-title">Arrival & Orientation Support</h5>
+          <p class="card-text">
+            Get settled quickly with local guidance, area orientation and lifestyle insights.
+          </p>
+          <a href="booking.html" class="btn btn-primary">Get Started</a>
+        </div>
+      </div>
+    </div>
+
+  </div>
 </section>
-</main>
 
+<!-- VISIBLE FAQ (SEO BOOST) -->
+<section class="container my-5">
+  <h2 class="text-center mb-4">Frequently Asked Questions</h2>
+
+  <div class="accordion" id="faqAccordion">
+
+    <div class="accordion-item">
+      <h3 class="accordion-header">
+        <button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#faq1">
+          Do you provide airport transfers from Cape Town International Airport?
+        </button>
+      </h3>
+      <div id="faq1" class="accordion-collapse collapse show">
+        <div class="accordion-body">
+          Yes, we offer private airport transfers from Cape Town International Airport to all major areas.
+        </div>
+      </div>
+    </div>
+
+    <div class="accordion-item">
+      <h3 class="accordion-header">
+        <button class="accordion-button collapsed" data-bs-toggle="collapse" data-bs-target="#faq2">
+          Can I book city tours and property viewing transport?
+        </button>
+      </h3>
+      <div id="faq2" class="accordion-collapse collapse">
+        <div class="accordion-body">
+          Absolutely. We offer guided city tours as well as transport for property viewings.
+        </div>
+      </div>
+    </div>
+
+  </div>
+</section>
+
+<!-- FOOTER -->
 <footer class="bg-dark text-white text-center py-4">
   <p class="mb-1">&copy; 2025 Virtual Nomad Cape Town. All rights reserved.</p>
+  <div>
+    <a href="index.html#home" class="text-white me-3">Home</a>
+    <a href="index.html#services" class="text-white me-3">Services</a>
+    <a href="index.html#about" class="text-white me-3">About Us</a>
+    <a href="index.html#contact" class="text-white">Contact</a>
+  </div>
 </footer>
-
-<!-- JS moved for performance -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
 </html>
