--- a/airport-transfers.html
+++ b/airport-transfers.html
@@ -10,6 +10,9 @@
   <meta name="keywords" content="Cape Town airport transfers, city tours Cape Town, airport pickup Cape Town, private transfers Cape Town, relocation transport Cape Town">
 
   <link rel="canonical" href="https://www.virtualnomad.co.za/airport-transfers.html">
+  <link rel="icon" type="image/png" href="logo.png">
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="favicon.png">
 
   <!-- Local SEO -->
   <meta name="geo.region" content="ZA-WC">
