--- a/virtualtours.html
+++ b/virtualtours.html
@@ -12,6 +12,9 @@
   <meta name="keywords" content="virtual property viewing Cape Town, live property tours Cape Town, remote property viewing, buy property in Cape Town remotely, digital nomad relocation Cape Town">
 
   <link rel="canonical" href="https://www.virtualnomad.com/virtual-property-tours.html">
+  <link rel="icon" type="image/png" href="logo.png">
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="favicon.png">
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
