--- a/culturalorientation.html
+++ b/culturalorientation.html
@@ -1,166 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
-    <!-- Bootstrap CSS (via CDN) -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Virtual Nomad - Virtual Property Tours & Relocation Services in Cape Town</title>
+    <meta name="description" content="Relocate to Cape Town effortlessly with Virtual Nomad. Enjoy virtual property tours, local guidance, cultural orientation, and expert relocation support for digital nomads and remote workers.">
 
-  <!-- Bootstrap Icons -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.5/font/bootstrap-icons.min.css">
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://www.virtualnomad.co.za/">
 
-  
-
-<!-- Bootstrap CSS -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-
-
-
-  <!-- Bootstrap JS (for interactive features) -->
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Favicon -->
     <link rel="icon" type="image/png" href="logo.png">
-  <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png">
 
-  <!-- EmailJS SDK -->
-  <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
-  <script>
-    (function () {
-      emailjs.init("bDD9Bs-d_KntBXRt_"); // Replace with your actual Public Key
-    })();
-  </script>
- <!DOCTYPE html>
- <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Virtual Nomad - Welcome to Seamless Relocation</title>
-        <meta name="description" content="Relocate to Cape Town effortlessly with our expert relocation services tailored for digital nomads and remote workers. Virtual tours, legal support, and cultural orientation all in one place.">
-        <meta name="keywords" content="relocation services, Cape Town, digital nomads, virtual tours, legal support, cultural orientation">
-        <link rel="canonical" href="https://www.virtualnomad.com/">
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.5/font/bootstrap-icons.min.css">
 
-        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-XXXXX-Y"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-  gtag('config', 'UA-XXXXX-Y');
-</script>
+    <!-- EmailJS SDK -->
+    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+    <script>
+        (function () {
+            emailjs.init("bDD9Bs-d_KntBXRt_"); // Replace with your actual Public Key
+        })();
+    </script>
 
-      </head>
-     <!-- Bootstrap CSS -->
-     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
-     <!-- Custom Styles -->
-     <style>
-         /* Navbar Styling */
-         .navbar {
-             padding: 10px 20px;
-         }
- 
-         .navbar-brand {
-             display: flex;
-             align-items: center;
-         }
- 
-         .navbar-brand .logo {
-             height: 40px;
-             width: auto;
-         }
- 
-         .navbar-nav .nav-link {
-             margin: 0 10px;
-             font-size: 1rem;
-             text-transform: capitalize;
-         }
- 
-         .navbar-nav .nav-link.active {
-             font-weight: bold;
-             text-decoration: underline;
-         }
- 
-         /* Header Styling */
-         .main-header {
-             position: relative;
-             width: 100%;
-             height: 60vh;
-             overflow: hidden;
-         }
- 
-         .main-header .header-image {
-             width: 100%;
-             height: 100%;
-             object-fit: cover;
-         }
- 
-         .header-overlay {
-             position: absolute;
-             top: 0;
-             left: 0;
-             width: 100%;
-             height: 100%;
-             background: rgba(0, 0, 0, 0.4);
-             color: white;
-             display: flex;
-             flex-direction: column;
-             justify-content: center;
-             align-items: center;
-             text-align: center;
-         }
- 
-         .header-overlay h1 {
-             font-size: 3rem;
-             margin: 0;
-         }
- 
-         .header-overlay p {
-             font-size: 1.5rem;
-             margin: 0;
-         }
- 
-         /* Image Grid Styling */
-         .image-grid {
-             display: grid;
-             grid-template-columns: repeat(2, 1fr);
-             gap: 20px;
-             margin: 20px;
-         }
- 
-         .image-item {
-             text-align: center;
-             border: 1px solid #ddd;
-             padding: 15px;
-             border-radius: 8px;
-             background-color: #f9f9f9;
-             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-         }
- 
-         .image-item img {
-             width: 90%;
-             height: auto;
-             border-radius: 5px;
-         }
- 
-         .image-item p {
-             margin-top: 10px;
-             font-size: 1rem;
-             color: #333;
-         }
- 
-         .image-item button {
-             margin-top: 10px;
-             padding: 10px 15px;
-             background-color: #007bff;
-             color: white;
-             border: none;
-             border-radius: 5px;
-             cursor: pointer;
-         }
- 
-         .image-item button:hover {
-             background-color: #0056b3;
-         }
-     </style>
-     <!-- Bootstrap JavaScript -->
-     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
- </head>
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-XXXXX-Y"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'UA-XXXXX-Y');
+    </script>
+
+    <!-- Structured Data (LocalBusiness + Service) -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "LocalBusiness",
+      "name": "Virtual Nomad",
+      "image": "https://www.virtualnomad.co.za/logo.png",
+      "url": "https://www.virtualnomad.co.za/",
+      "telephone": "+27-XXX-XXXXXXX",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "Your Street Address",
+        "addressLocality": "Cape Town",
+        "addressRegion": "Western Cape",
+        "postalCode": "8001",
+        "addressCountry": "ZA"
+      },
+      "sameAs": [
+        "https://www.facebook.com/VirtualNomad",
+        "https://www.linkedin.com/company/virtual-nomad"
+      ],
+      "priceRange": "$$$",
+      "openingHours": "Mo-Fr 09:00-18:00",
+      "geo": {
+        "@type": "GeoCoordinates",
+        "latitude": -33.9249,
+        "longitude": 18.4241
+      },
+      "department": {
+        "@type": "ProfessionalService",
+        "name": "Virtual Property Tours",
+        "serviceType": "Virtual property viewing and relocation support in Cape Town",
+        "areaServed": {
+          "@type": "Place",
+          "name": "Cape Town, Western Cape"
+        }
+      }
+    }
+    </script>
+
+    <!-- Custom Styles -->
+    <style>
+        body {font-family: Arial, sans-serif;}
+        .navbar {padding: 10px 20px;}
+        .navbar-brand {display: flex; align-items: center;}
+        .navbar-brand .logo {height: 40px; width: auto;}
+        .navbar-nav .nav-link {margin: 0 10px; font-size: 1rem; text-transform: capitalize;}
+        .navbar-nav .nav-link.active {font-weight: bold; text-decoration: underline;}
+
+        .main-header {position: relative; width: 100%; height: 60vh; overflow: hidden;}
+        .main-header .header-image {width: 100%; height: 100%; object-fit: cover;}
+        .header-overlay {position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.4); color: white; display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center;}
+        .header-overlay h1 {font-size: 3rem; margin: 0;}
+        .header-overlay p {font-size: 1.5rem; margin: 0;}
+
+        .image-grid {display: grid; grid-template-columns: repeat(auto-fit, minmax(260px, 1fr)); gap: 20px; margin: 20px;}
+        .image-item {text-align: center; border: 1px solid #ddd; padding: 15px; border-radius: 8px; background-color: #f9f9f9; box-shadow: 0 4px 8px rgba(0,0,0,0.1);}
+        .image-item img {width: 90%; height: auto; border-radius: 5px;}
+        .image-item p {margin-top: 10px; font-size: 1rem; color: #333;}
+        .image-item button {margin-top: 10px; padding: 10px 15px; background-color: #007bff; color: white; border: none; border-radius: 5px; cursor: pointer;}
+        .image-item button:hover {background-color: #0056b3;}
+
+        footer {background-color: #222; color: #fff; text-align: center; padding: 20px;}
+        .footer-nav a {color: #fff; margin: 0 10px; text-decoration: none;}
+        .footer-nav a:hover {text-decoration: underline;}
+    </style>
+</head>
+<body>
  <body>
      <!-- Navigation Bar -->
      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
