--- a/index.html
+++ b/index.html
@@ -303,22 +303,22 @@
     <div class="col-md-6">
       <div class="p-4 bg-white rounded shadow">
         <p>
-          At our core, we believe that relocating to a new place should be an exciting adventure, not a stressful experience. That’s why we’ve made it our mission to simplify the journey for remote workers, digital nomads, and professionals on the move. From finding the perfect place to call home to navigating local logistics and integrating into the vibrant culture of Cape Town, we handle the complexities so you can focus on what matters most—living, working, and thriving.
+          At Virtual Nomad, we make relocating to Cape Town smooth and hassle-free. Whether you're exploring the city for the first time or searching for your perfect home, our team ensures every step is seamless and stress-free.
         </p>
 
-        <h3 class="mt-4">Why Choose Us?</h3>
+        <h3 class="mt-4">Our Core Services</h3>
         <ul class="list-unstyled">
           <li>
+            <h5 class="fw-bold">Airport Transfers & City Tours</h5>
+            <p>Reliable, comfortable pickups from the airport and guided city tours so you can explore Cape Town safely and efficiently.</p>
+          </li>
+          <li>
             <h5 class="fw-bold">Virtual Property Tours</h5>
-            <p>View everything remotely with 360-degree virtual tours to find your ideal home or apartment without stepping a foot inside.</p>
+            <p>Explore apartments and homes remotely with immersive 360° virtual property tours before committing to a visit.</p>
           </li>
           <li>
-            <h5 class="fw-bold">Legal & Logistical Support</h5>
-            <p>We manage visa applications, insurance setup, banking, and other essentials to ensure you're fully prepared from day one.</p>
-          </li>
-          <li>
-            <h5 class="fw-bold">Cultural Orientation</h5>
-            <p>Our tailored programs immerse you in Cape Town’s way of life, helping you feel at home and part of the community from the start.</p>
+            <h5 class="fw-bold">In-Person Property Viewings</h5>
+            <p>We drive you to selected properties, show you the area, and help you experience each home firsthand — saving time and effort.</p>
           </li>
         </ul>
       </div>
